updates for percentage fields

--- a/world_data_aggregation.ipynb
+++ b/world_data_aggregation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "14                      7.7  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -397,25 +397,25 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transform_df = df.fillna(0)\n",
-    "transform_df = transform_df.replace(regex=r'---|\\?',value=0)\n",
-    "transform_df = transform_df.replace('N.A.',0)\n",
-    "transform_df = transform_df.drop(columns=['Rank'])\n",
-    "transform_df = transform_df.rename(columns=lambda x: column_rename(x))\n",
-    "transform_df = transform_df.rename(str.upper, axis='columns')\n",
+    "# transform_df = df.fillna(0)\n",
+    "text_transform_df = df.replace(regex=r'---|\\?',value=0)\n",
+    "# text_transform_df = transform_df.replace('N.A.',0)\n",
+    "text_transform_df = text_transform_df.drop(columns=['Rank'])\n",
+    "text_transform_df = text_transform_df.rename(columns=lambda x: column_rename(x))\n",
+    "text_transform_df = text_transform_df.rename(str.upper, axis='columns')\n",
     "\n",
-    "transform_df.columns"
+    "text_transform_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "      <td>183</td>\n",
        "      <td>49</td>\n",
        "      <td>26.8</td>\n",
-       "      <td>0</td>\n",
+       "      <td>N.A.</td>\n",
        "      <td>64</td>\n",
        "      <td>13</td>\n",
        "      <td>20.3</td>\n",
@@ -684,7 +684,7 @@
        "10                            28.6                         09 1998   \n",
        "11                            28.3                         03 2000   \n",
        "12                            27.6                               0   \n",
-       "13                            26.8                               0   \n",
+       "13                            26.8                            N.A.   \n",
        "14                            26.7                         01 1999   \n",
        "\n",
        "   UPPER_HOUSE_OR_SENATE_SEATS UPPER_HOUSE_OR_SENATE_WOMEN  \\\n",
@@ -722,13 +722,13 @@
        "14                             7.7  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transform_df.head(15)"
+    "text_transform_df.head(15)"
    ]
   },
   {
@@ -741,16 +741,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform_df.COUNTRY = transform_df.COUNTRY.replace(regex=r'\\(|\\)|\\*|\\d',value='')"
+    "date_tranform_df = text_transform_df.copy()\n",
+    "date_tranform_df.COUNTRY = date_tranform_df.COUNTRY.replace(regex=r'\\(|\\)|\\*|\\d',value='')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1041,8 +1042,8 @@
     }
    ],
    "source": [
-    "transform_df.LOWER_OR_SINGLE_HOUSE_ELECTIONS = pd.to_datetime(transform_df.LOWER_OR_SINGLE_HOUSE_ELECTIONS,errors='coerce',infer_datetime_format=True)\n",
-    "transform_df.UPPER_HOUSE_OR_SENATE_ELECTIONS = pd.to_datetime(transform_df.UPPER_HOUSE_OR_SENATE_ELECTIONS,errors='coerce',infer_datetime_format=True)\n"
+    "date_tranform_df.LOWER_OR_SINGLE_HOUSE_ELECTIONS = pd.to_datetime(date_tranform_df.LOWER_OR_SINGLE_HOUSE_ELECTIONS,errors='coerce',infer_datetime_format=True)\n",
+    "date_tranform_df.UPPER_HOUSE_OR_SENATE_ELECTIONS = pd.to_datetime(date_tranform_df.UPPER_HOUSE_OR_SENATE_ELECTIONS,errors='coerce',infer_datetime_format=True)"
    ]
   },
   {
@@ -1055,21 +1056,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform_df.LOWER_OR_SINGLE_HOUSE_SEATS = pd.to_numeric(transform_df.LOWER_OR_SINGLE_HOUSE_SEATS.replace(regex='\\D',value=''))\n",
-    "transform_df.LOWER_OR_SINGLE_HOUSE_WOMEN = pd.to_numeric(transform_df.LOWER_OR_SINGLE_HOUSE_WOMEN.replace(regex='\\D',value=''))\n",
-    "transform_df.LOWER_OR_SINGLE_HOUSE_PERCENT_W = pd.to_numeric(transform_df.LOWER_OR_SINGLE_HOUSE_PERCENT_W.replace(regex='\\D',value=''))\n",
-    "transform_df.UPPER_HOUSE_OR_SENATE_SEATS = pd.to_numeric(transform_df.UPPER_HOUSE_OR_SENATE_SEATS.replace(regex='\\D',value=''))\n",
-    "transform_df.UPPER_HOUSE_OR_SENATE_WOMEN = pd.to_numeric(transform_df.UPPER_HOUSE_OR_SENATE_WOMEN.replace(regex='\\D',value=''))\n",
-    "transform_df.UPPER_HOUSE_OR_SENATE_PERCENT_W = pd.to_numeric(transform_df.UPPER_HOUSE_OR_SENATE_PERCENT_W.replace(regex='\\D',value=''))"
+    "num_transform_df = date_tranform_df.copy()\n",
+    "\n",
+    "num_transform_df.LOWER_OR_SINGLE_HOUSE_SEATS = pd.to_numeric(num_transform_df.LOWER_OR_SINGLE_HOUSE_SEATS.replace(regex='\\D',value=''))\n",
+    "num_transform_df.LOWER_OR_SINGLE_HOUSE_WOMEN = pd.to_numeric(num_transform_df.LOWER_OR_SINGLE_HOUSE_WOMEN.replace(regex='\\D',value=''))\n",
+    "\n",
+    "num_transform_df.UPPER_HOUSE_OR_SENATE_SEATS = pd.to_numeric(num_transform_df.UPPER_HOUSE_OR_SENATE_SEATS.replace(regex='\\D',value=''))\n",
+    "num_transform_df.UPPER_HOUSE_OR_SENATE_WOMEN = pd.to_numeric(num_transform_df.UPPER_HOUSE_OR_SENATE_WOMEN.replace(regex='\\D',value=''))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_transform_df.LOWER_OR_SINGLE_HOUSE_PERCENT_W = num_transform_df.LOWER_OR_SINGLE_HOUSE_WOMEN / num_transform_df.LOWER_OR_SINGLE_HOUSE_SEATS\n",
+    "num_transform_df.UPPER_HOUSE_OR_SENATE_PERCENT_W = num_transform_df.UPPER_HOUSE_OR_SENATE_WOMEN / num_transform_df.UPPER_HOUSE_OR_SENATE_SEATS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1083,22 +1095,22 @@
        "UPPER_HOUSE_OR_SENATE_ELECTIONS    datetime64[ns]\n",
        "UPPER_HOUSE_OR_SENATE_SEATS               float64\n",
        "UPPER_HOUSE_OR_SENATE_WOMEN               float64\n",
-       "UPPER_HOUSE_OR_SENATE_PERCENT_W           float64\n",
+       "UPPER_HOUSE_OR_SENATE_PERCENT_W            object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transform_df.dtypes"
+    "num_transform_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1140,11 +1152,11 @@
        "      <td>1998-09-01</td>\n",
        "      <td>349.0</td>\n",
        "      <td>149.0</td>\n",
-       "      <td>427.0</td>\n",
+       "      <td>0.426934</td>\n",
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1408</th>\n",
@@ -1152,11 +1164,11 @@
        "      <td>1994-09-01</td>\n",
        "      <td>349.0</td>\n",
        "      <td>141.0</td>\n",
-       "      <td>404.0</td>\n",
+       "      <td>0.404011</td>\n",
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1773</th>\n",
@@ -1164,11 +1176,11 @@
        "      <td>NaT</td>\n",
        "      <td>349.0</td>\n",
        "      <td>164.0</td>\n",
-       "      <td>47.0</td>\n",
+       "      <td>0.469914</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2512</th>\n",
@@ -1176,11 +1188,11 @@
        "      <td>2002-09-01</td>\n",
        "      <td>349.0</td>\n",
        "      <td>158.0</td>\n",
-       "      <td>453.0</td>\n",
+       "      <td>0.452722</td>\n",
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3802</th>\n",
@@ -1188,11 +1200,11 @@
        "      <td>2006-09-01</td>\n",
        "      <td>349.0</td>\n",
        "      <td>164.0</td>\n",
-       "      <td>470.0</td>\n",
+       "      <td>0.469914</td>\n",
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6710</th>\n",
@@ -1200,11 +1212,11 @@
        "      <td>NaT</td>\n",
        "      <td>349.0</td>\n",
        "      <td>161.0</td>\n",
-       "      <td>461.0</td>\n",
+       "      <td>0.461318</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8504</th>\n",
@@ -1212,11 +1224,11 @@
        "      <td>2002-09-01</td>\n",
        "      <td>349.0</td>\n",
        "      <td>157.0</td>\n",
-       "      <td>450.0</td>\n",
+       "      <td>0.449857</td>\n",
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10145</th>\n",
@@ -1224,35 +1236,11 @@
        "      <td>2006-09-01</td>\n",
        "      <td>349.0</td>\n",
        "      <td>165.0</td>\n",
-       "      <td>473.0</td>\n",
+       "      <td>0.472779</td>\n",
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16135</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>2002-09-01</td>\n",
-       "      <td>349.0</td>\n",
-       "      <td>158.0</td>\n",
-       "      <td>45.3</td>\n",
-       "      <td>1970-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17056</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>2006-09-01</td>\n",
-       "      <td>349.0</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>47.3</td>\n",
-       "      <td>1970-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18180</th>\n",
@@ -1260,11 +1248,11 @@
        "      <td>NaT</td>\n",
        "      <td>349.0</td>\n",
        "      <td>165.0</td>\n",
-       "      <td>473.0</td>\n",
+       "      <td>0.472779</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23697</th>\n",
@@ -1272,23 +1260,11 @@
        "      <td>2018-09-09</td>\n",
        "      <td>349.0</td>\n",
        "      <td>165.0</td>\n",
-       "      <td>473.0</td>\n",
+       "      <td>0.472779</td>\n",
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41951</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>2006-09-01</td>\n",
-       "      <td>349.0</td>\n",
-       "      <td>164.0</td>\n",
-       "      <td>4700.0</td>\n",
-       "      <td>1970-01-01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43883</th>\n",
@@ -1296,11 +1272,11 @@
        "      <td>NaT</td>\n",
        "      <td>349.0</td>\n",
        "      <td>162.0</td>\n",
-       "      <td>464.0</td>\n",
+       "      <td>0.464183</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1316,28 +1292,22 @@
        "6710   Sweden                             NaT                        349.0   \n",
        "8504   Sweden                      2002-09-01                        349.0   \n",
        "10145  Sweden                      2006-09-01                        349.0   \n",
-       "16135  Sweden                      2002-09-01                        349.0   \n",
-       "17056  Sweden                      2006-09-01                        349.0   \n",
        "18180  Sweden                             NaT                        349.0   \n",
        "23697  Sweden                      2018-09-09                        349.0   \n",
-       "41951  Sweden                      2006-09-01                        349.0   \n",
        "43883  Sweden                             NaT                        349.0   \n",
        "\n",
        "       LOWER_OR_SINGLE_HOUSE_WOMEN  LOWER_OR_SINGLE_HOUSE_PERCENT_W  \\\n",
-       "0                            149.0                            427.0   \n",
-       "1408                         141.0                            404.0   \n",
-       "1773                         164.0                             47.0   \n",
-       "2512                         158.0                            453.0   \n",
-       "3802                         164.0                            470.0   \n",
-       "6710                         161.0                            461.0   \n",
-       "8504                         157.0                            450.0   \n",
-       "10145                        165.0                            473.0   \n",
-       "16135                        158.0                             45.3   \n",
-       "17056                        165.0                             47.3   \n",
-       "18180                        165.0                            473.0   \n",
-       "23697                        165.0                            473.0   \n",
-       "41951                        164.0                           4700.0   \n",
-       "43883                        162.0                            464.0   \n",
+       "0                            149.0                         0.426934   \n",
+       "1408                         141.0                         0.404011   \n",
+       "1773                         164.0                         0.469914   \n",
+       "2512                         158.0                         0.452722   \n",
+       "3802                         164.0                         0.469914   \n",
+       "6710                         161.0                         0.461318   \n",
+       "8504                         157.0                         0.449857   \n",
+       "10145                        165.0                         0.472779   \n",
+       "18180                        165.0                         0.472779   \n",
+       "23697                        165.0                         0.472779   \n",
+       "43883                        162.0                         0.464183   \n",
        "\n",
        "      UPPER_HOUSE_OR_SENATE_ELECTIONS  UPPER_HOUSE_OR_SENATE_SEATS  \\\n",
        "0                          1970-01-01                          0.0   \n",
@@ -1348,37 +1318,31 @@
        "6710                              NaT                          NaN   \n",
        "8504                       1970-01-01                          0.0   \n",
        "10145                      1970-01-01                          0.0   \n",
-       "16135                      1970-01-01                          0.0   \n",
-       "17056                      1970-01-01                          0.0   \n",
        "18180                             NaT                          NaN   \n",
        "23697                      1970-01-01                          0.0   \n",
-       "41951                      1970-01-01                          0.0   \n",
        "43883                             NaT                          NaN   \n",
        "\n",
-       "       UPPER_HOUSE_OR_SENATE_WOMEN  UPPER_HOUSE_OR_SENATE_PERCENT_W  \n",
-       "0                              0.0                              0.0  \n",
-       "1408                           0.0                              0.0  \n",
-       "1773                           NaN                              NaN  \n",
-       "2512                           0.0                              0.0  \n",
-       "3802                           0.0                              0.0  \n",
-       "6710                           NaN                              NaN  \n",
-       "8504                           0.0                              0.0  \n",
-       "10145                          0.0                              0.0  \n",
-       "16135                          0.0                              0.0  \n",
-       "17056                          0.0                              0.0  \n",
-       "18180                          NaN                              NaN  \n",
-       "23697                          0.0                              0.0  \n",
-       "41951                          0.0                              0.0  \n",
-       "43883                          NaN                              NaN  "
+       "       UPPER_HOUSE_OR_SENATE_WOMEN UPPER_HOUSE_OR_SENATE_PERCENT_W  \n",
+       "0                              0.0                               0  \n",
+       "1408                           0.0                               0  \n",
+       "1773                           NaN                               -  \n",
+       "2512                           0.0                               0  \n",
+       "3802                           0.0                               0  \n",
+       "6710                           NaN                               -  \n",
+       "8504                           0.0                               0  \n",
+       "10145                          0.0                               0  \n",
+       "18180                          NaN                               -  \n",
+       "23697                          0.0                               0  \n",
+       "43883                          NaN                               -  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "drop_dupp = transform_df.drop_duplicates()\n",
+    "drop_dupp = num_transform_df.drop_duplicates()\n",
     "drop_dupp.reset_index(drop=True)\n",
     "drop_dupp[drop_dupp.COUNTRY.isin(['Sweden'])]"
    ]
