better order of events for divide by 0

--- a/world_data_aggregation.ipynb
+++ b/world_data_aggregation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "14                      7.7  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "14                             7.7  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_transform_df.UPPER_HOUSE_OR_SENATE_WOMEN.fillna(0, inplace=True)\n",
+    "num_transform_df.UPPER_HOUSE_OR_SENATE_SEATS.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1095,11 +1105,11 @@
        "UPPER_HOUSE_OR_SENATE_ELECTIONS    datetime64[ns]\n",
        "UPPER_HOUSE_OR_SENATE_SEATS               float64\n",
        "UPPER_HOUSE_OR_SENATE_WOMEN               float64\n",
-       "UPPER_HOUSE_OR_SENATE_PERCENT_W            object\n",
+       "UPPER_HOUSE_OR_SENATE_PERCENT_W           float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1166,7 @@
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1408</th>\n",
@@ -1168,7 +1178,7 @@
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1773</th>\n",
@@ -1178,9 +1188,9 @@
        "      <td>164.0</td>\n",
        "      <td>0.469914</td>\n",
        "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2512</th>\n",
@@ -1192,7 +1202,7 @@
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3802</th>\n",
@@ -1204,7 +1214,7 @@
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6710</th>\n",
@@ -1214,9 +1224,9 @@
        "      <td>161.0</td>\n",
        "      <td>0.461318</td>\n",
        "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8504</th>\n",
@@ -1228,7 +1238,7 @@
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10145</th>\n",
@@ -1240,7 +1250,7 @@
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18180</th>\n",
@@ -1250,9 +1260,9 @@
        "      <td>165.0</td>\n",
        "      <td>0.472779</td>\n",
        "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23697</th>\n",
@@ -1264,7 +1274,7 @@
        "      <td>1970-01-01</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43883</th>\n",
@@ -1274,9 +1284,9 @@
        "      <td>162.0</td>\n",
        "      <td>0.464183</td>\n",
        "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1312,31 +1322,31 @@
        "      UPPER_HOUSE_OR_SENATE_ELECTIONS  UPPER_HOUSE_OR_SENATE_SEATS  \\\n",
        "0                          1970-01-01                          0.0   \n",
        "1408                       1970-01-01                          0.0   \n",
-       "1773                              NaT                          NaN   \n",
+       "1773                              NaT                          0.0   \n",
        "2512                       1970-01-01                          0.0   \n",
        "3802                       1970-01-01                          0.0   \n",
-       "6710                              NaT                          NaN   \n",
+       "6710                              NaT                          0.0   \n",
        "8504                       1970-01-01                          0.0   \n",
        "10145                      1970-01-01                          0.0   \n",
-       "18180                             NaT                          NaN   \n",
+       "18180                             NaT                          0.0   \n",
        "23697                      1970-01-01                          0.0   \n",
-       "43883                             NaT                          NaN   \n",
+       "43883                             NaT                          0.0   \n",
        "\n",
-       "       UPPER_HOUSE_OR_SENATE_WOMEN UPPER_HOUSE_OR_SENATE_PERCENT_W  \n",
-       "0                              0.0                               0  \n",
-       "1408                           0.0                               0  \n",
-       "1773                           NaN                               -  \n",
-       "2512                           0.0                               0  \n",
-       "3802                           0.0                               0  \n",
-       "6710                           NaN                               -  \n",
-       "8504                           0.0                               0  \n",
-       "10145                          0.0                               0  \n",
-       "18180                          NaN                               -  \n",
-       "23697                          0.0                               0  \n",
-       "43883                          NaN                               -  "
+       "       UPPER_HOUSE_OR_SENATE_WOMEN  UPPER_HOUSE_OR_SENATE_PERCENT_W  \n",
+       "0                              0.0                              NaN  \n",
+       "1408                           0.0                              NaN  \n",
+       "1773                           0.0                              NaN  \n",
+       "2512                           0.0                              NaN  \n",
+       "3802                           0.0                              NaN  \n",
+       "6710                           0.0                              NaN  \n",
+       "8504                           0.0                              NaN  \n",
+       "10145                          0.0                              NaN  \n",
+       "18180                          0.0                              NaN  \n",
+       "23697                          0.0                              NaN  \n",
+       "43883                          0.0                              NaN  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
