added line for creating csv file of output into data folder

--- a/world_data_aggregation.ipynb
+++ b/world_data_aggregation.ipynb
@@ -1356,6 +1356,15 @@
     "drop_dupp.reset_index(drop=True)\n",
     "drop_dupp[drop_dupp.COUNTRY.isin(['Sweden'])]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_dupp.to_csv('./data/world_data_final.csv')"
+   ]
   }
  ],
  "metadata": {
