--- a/world_data_aggregation.ipynb
+++ b/world_data_aggregation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "14                      2.8  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "14                           2                             2.8  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,16 +733,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rebecca\\AppData\\Local\\Temp\\ipykernel_22732\\1540431661.py:1: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+      "C:\\Users\\Rebecca\\AppData\\Local\\Temp\\ipykernel_21572\\1540431661.py:1: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
       "  transform_df.LOWER_OR_SINGLE_HOUSE_ELECTIONS = pd.to_datetime(transform_df.LOWER_OR_SINGLE_HOUSE_ELECTIONS,errors='coerce',infer_datetime_format=True)\n",
-      "C:\\Users\\Rebecca\\AppData\\Local\\Temp\\ipykernel_22732\\1540431661.py:2: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
+      "C:\\Users\\Rebecca\\AppData\\Local\\Temp\\ipykernel_21572\\1540431661.py:2: UserWarning: Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
       "  transform_df.UPPER_HOUSE_OR_SENATE_ELECTIONS = pd.to_datetime(transform_df.UPPER_HOUSE_OR_SENATE_ELECTIONS,errors='coerce',infer_datetime_format=True)\n"
      ]
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
        "18837                          0.0                              0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,12 +1092,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>LOWER_OR_SINGLE_HOUSE_ELECTIONS</th>\n",
+       "      <th>LOWER_OR_SINGLE_HOUSE_SEATS</th>\n",
+       "      <th>LOWER_OR_SINGLE_HOUSE_WOMEN</th>\n",
+       "      <th>LOWER_OR_SINGLE_HOUSE_PERCENT_W</th>\n",
+       "      <th>UPPER_HOUSE_OR_SENATE_ELECTIONS</th>\n",
+       "      <th>UPPER_HOUSE_OR_SENATE_SEATS</th>\n",
+       "      <th>UPPER_HOUSE_OR_SENATE_WOMEN</th>\n",
+       "      <th>UPPER_HOUSE_OR_SENATE_PERCENT_W</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>1998-09-01</td>\n",
+       "      <td>349.0</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>427.0</td>\n",
+       "      <td>1970-01-01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>1998-03-01</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>374.0</td>\n",
+       "      <td>1970-01-01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>1999-03-01</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>1970-01-01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>1998-05-01</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>1999-05-01</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>267.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>2001-09-01</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>358.0</td>\n",
+       "      <td>1970-01-01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53115</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>396.0</td>\n",
+       "      <td>184.0</td>\n",
+       "      <td>465.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>415.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53160</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>709.0</td>\n",
+       "      <td>223.0</td>\n",
+       "      <td>315.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53257</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53371</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>430.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>284.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53399</th>\n",
+       "      <td>Kenya</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>234.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>309.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3410 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        COUNTRY LOWER_OR_SINGLE_HOUSE_ELECTIONS  \\\n",
+       "0                        Sweden                      1998-09-01   \n",
+       "1                       Denmark                      1998-03-01   \n",
+       "2                       Finland                      1999-03-01   \n",
+       "3                   Netherlands                      1998-05-01   \n",
+       "4                        Norway                      2001-09-01   \n",
+       "...                         ...                             ...   \n",
+       "53115              South Africa                             NaT   \n",
+       "53160                   Germany                             NaT   \n",
+       "53257                    Zambia                             NaT   \n",
+       "53371  United States of America                             NaT   \n",
+       "53399                     Kenya                             NaT   \n",
+       "\n",
+       "       LOWER_OR_SINGLE_HOUSE_SEATS  LOWER_OR_SINGLE_HOUSE_WOMEN  \\\n",
+       "0                            349.0                        149.0   \n",
+       "1                            179.0                         67.0   \n",
+       "2                            200.0                         73.0   \n",
+       "3                            150.0                         54.0   \n",
+       "4                            165.0                         59.0   \n",
+       "...                            ...                          ...   \n",
+       "53115                        396.0                        184.0   \n",
+       "53160                        709.0                        223.0   \n",
+       "53257                        155.0                         20.0   \n",
+       "53371                        430.0                        122.0   \n",
+       "53399                        350.0                         82.0   \n",
+       "\n",
+       "       LOWER_OR_SINGLE_HOUSE_PERCENT_W UPPER_HOUSE_OR_SENATE_ELECTIONS  \\\n",
+       "0                                427.0                      1970-01-01   \n",
+       "1                                374.0                      1970-01-01   \n",
+       "2                                365.0                      1970-01-01   \n",
+       "3                                360.0                      1999-05-01   \n",
+       "4                                358.0                      1970-01-01   \n",
+       "...                                ...                             ...   \n",
+       "53115                            465.0                             NaT   \n",
+       "53160                            315.0                             NaT   \n",
+       "53257                            129.0                             NaT   \n",
+       "53371                            284.0                             NaT   \n",
+       "53399                            234.0                             NaT   \n",
+       "\n",
+       "       UPPER_HOUSE_OR_SENATE_SEATS  UPPER_HOUSE_OR_SENATE_WOMEN  \\\n",
+       "0                              0.0                          0.0   \n",
+       "1                              0.0                          0.0   \n",
+       "2                              0.0                          0.0   \n",
+       "3                             75.0                         20.0   \n",
+       "4                              0.0                          0.0   \n",
+       "...                            ...                          ...   \n",
+       "53115                         53.0                         22.0   \n",
+       "53160                         69.0                         23.0   \n",
+       "53257                          NaN                          NaN   \n",
+       "53371                        100.0                         24.0   \n",
+       "53399                         68.0                         21.0   \n",
+       "\n",
+       "       UPPER_HOUSE_OR_SENATE_PERCENT_W  \n",
+       "0                                  0.0  \n",
+       "1                                  0.0  \n",
+       "2                                  0.0  \n",
+       "3                                267.0  \n",
+       "4                                  0.0  \n",
+       "...                                ...  \n",
+       "53115                            415.0  \n",
+       "53160                            333.0  \n",
+       "53257                              NaN  \n",
+       "53371                             24.0  \n",
+       "53399                            309.0  \n",
+       "\n",
+       "[3410 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop_dupp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save to csv\n",
-    "transform_df.to_csv('data/world_data.csv',index=False)"
+    "drop_dupp.to_csv('data/world_data.csv',index=False)"
    ]
   }
  ],
