change the colors to be custom and correlate to the democracy index site. added link to source data

--- a/corropleth.ipynb
+++ b/corropleth.ipynb
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -21623,31 +21623,43 @@
          "colorscale": [
           [
            0,
-           "rgb(207, 89, 126)"
+           "#200211"
           ],
           [
-           0.16666666666666666,
-           "rgb(232, 132, 113)"
+           0.1111111111111111,
+           "#5d0e1a"
+          ],
+          [
+           0.2222222222222222,
+           "#9b3327"
           ],
           [
            0.3333333333333333,
-           "rgb(238, 180, 121)"
+           "#e3754f"
           ],
           [
-           0.5,
-           "rgb(233, 226, 156)"
+           0.4444444444444444,
+           "#f1b26e"
+          ],
+          [
+           0.5555555555555556,
+           "#f9e096"
           ],
           [
            0.6666666666666666,
-           "rgb(156, 203, 134)"
+           "#b2d878"
           ],
           [
-           0.8333333333333334,
-           "rgb(57, 177, 133)"
+           0.7777777777777778,
+           "#7bbb6d"
+          ],
+          [
+           0.8888888888888888,
+           "#489657"
           ],
           [
            1,
-           "rgb(0, 147, 146)"
+           "#2b6619"
           ]
          ]
         },
@@ -22819,7 +22831,7 @@
          }
         },
         "title": {
-         "text": "Democracy Index Score 2006-2022"
+         "text": "Democracy Index Score 2006-2022<br>Source: <a href=\"https://en.wikipedia.org/wiki/Democracy_Index\">            Democracy Index</a>"
         },
         "updatemenus": [
          {
@@ -22893,15 +22905,21 @@
     "              var_name ='Year',value_name ='Score')\n",
     "melt_df = melt_df.sort_values('Year')\n",
     "\n",
+    "index_colors = ['#200211','#5d0e1a','#9b3327','#e3754f','#f1b26e','#f9e096','#b2d878','#7bbb6d','#489657','#2b6619']\n",
+    "# px.colors.diverging.Temps[::-1]\n",
+    "\n",
+    "# https://en.wikipedia.org/wiki/Democracy_Index\n",
+    "\n",
     "fig = px.choropleth(melt_df, \n",
     "        locations=\"CODE\",\n",
     "        color=\"Score\", \n",
     "        hover_name=\"Country\",\n",
-    "        color_continuous_scale=px.colors.diverging.Temps[::-1],\n",
+    "        color_continuous_scale=index_colors,\n",
     "        hover_data={'Year': False, 'five_year_mean': True, 'CODE': False},\n",
     "        height=900,\n",
     "        animation_frame=\"Year\",\n",
-    "        title='Democracy Index Score 2006-2022')\n",
+    "        title='Democracy Index Score 2006-2022<br>Source: <a href=\"https://en.wikipedia.org/wiki/Democracy_Index\">\\\n",
+    "            Democracy Index</a>')\n",
     "\n",
     "fig.show()"
    ]
